# gh-social-ml-bhoumik

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  config.py  handoff.md  ingestion_engine.py  main.py  pyproject.toml  requirements-api.txt  retrieval_engine.py  trending_service.py  user_onboarding.py
Ranking_Training_module/: train_ranker.py
acquisition/: backend_client.py  checkpoint.py  config.py  corpus_pipeline.py  github_discovery.py  github_graphql_client.py  graphql_queries.py  identity.py  models.py  pipeline.py  repository_enricher.py
api/: contracts.py  main.py  metrics.py  runtime.py  v2.py
database/: connector.py
deploy/: production.env.example
docs/: OFFLINE_PIPELINE_RUNBOOK.md  PRODUCTION_RUNBOOK.md
embedding/: __init__.py  embedding_pipeline.py  embeddings.py  qdrant_cas.py  qdrant_store.py  repository_embedding.py  runtime.py  user_profile_store.py  vector_contract.py
feedback/: __init__.py  consumer.py  event_handlers.py  events.py  interactions.py  producer.py  safe_logging.py  settings.py  storage.py  user_lock.py  v2.py  v2_replay.py  v2_settings.py
inference/: .gitignore  feature_scaler.json  feature_spec.py  feed_assembly.py  heavy_ranker.pt  heavy_ranker_spec.md  model_manifest.json  ranker_service.py  runtime.py  value_function.py
ingestion/: __init__.py  pipeline.py  result.py
retrieval/: __init__.py  candidate_retriever.py  config.py  v2_retriever.py
scripts/: bootstrap_qdrant.py  e2e_mini_pipeline_test.py  evaluate_embeddings.py  measure_ram.py  mock_users.py  nearest_neighbor_eval.py  (+15 more)
(+54 files in other folders)
