[project]
name = "gh-social-ml"
version = "0.1.0"
description = "Machine-learning and offline data pipelines for GitSocial"
readme = "README.md"
requires-python = ">=3.10,<3.15"
dependencies = [
    "fastapi>=0.110.0",
    "httpx>=0.27.0",
    "numpy",
    "pg8000",
    "python-dotenv",
    "qdrant-client",
    "redis>=5.0.0",
    "requests",
    "schedule",
    "sentence-transformers",
    "uvicorn>=0.28.0",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-benchmark",
    "pytest-cov",
    "pytest-docker",
    "pytest-mock",
]

[tool.uv]
package = false
